--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
-@import "tailwindcss";
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Monoton&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import "tailwindcss";
 
-@theme {
+@theme{
   --font-josefin-sans: Josefin-Sans, "sans-serif";
   --font-roboto: Roboto, "sans-serif";
+}
+
+@theme {
   --color-brown: #52423e;
   --color-lightBrown: #645550;
   --color-darkBrown: #2c2523;
@@ -19,4 +22,13 @@
   --color-gray: #626965;
   --color-lightGray: #978580;
   --color-darkGray: #3f4441;
+}
+
+@theme {
+  --breakpoint-*: initial; /* ✅ Reset all default breakpoints */
+  --breakpoint-sm: 21.875rem;  /* 350px */
+  --breakpoint-md: 48rem;      /* 768px */
+  --breakpoint-lg: 64rem;      /* 1024px */
+  --breakpoint-xl: 80rem;      /* 1280px */
+  --breakpoint-2xl: 96rem;     /* 1536px */
 }
